[project]
name = "goalguide-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "openai>=1.99.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]
